--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   # A Docker web service
   - type: web
-    name: xlist
+    name: xlistrender
     env: docker
     repo: https://github.com/imxhe/alist-render.git # optional
     region: oregon # optional (defaults to oregon)
